# gol

./: Cargo.toml  Dockerfile
game_of_life_lib/: Cargo.toml
game_of_life_lib/src/: board.rs  cell.rs  game_of_life.rs  lib.rs  utility.rs
game_of_life_sdks/typescript/: .gitignore  package.json  tsconfig.json
game_of_life_sdks/typescript/src/: GameOfLife.ts  index.ts  start_sim_message.ts  subscribe_message.ts  type_guards.ts  types.ts
game_of_life_server/: Cargo.toml
game_of_life_server/src/: main.rs
