[package]
name = "game_of_life_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.17.0", features = ["rt", "sync",  "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
