[package]
name = "game_of_life_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws"] }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
game_of_life_lib = { path = "../game_of_life_lib" }
rand = "0.8"
